<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="20dp"
    android:orientation="vertical"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_usage_access"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_allow_usage_access" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="36dp" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_overlay_access"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_allow_overlay_access" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="36dp" />
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_notification_access"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_allow_notifications" />

</LinearLayout>
