<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:linksClickable="true">


        <TextView
            android:id="@+id/dialog_help_text_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_help_text"
            android:layout_marginBottom="16dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_help_www"
            android:autoLink="web"
            android:layout_marginBottom="16dp"
            android:textColorLink="#006699"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_help_e_mail"
            android:autoLink="email"
            android:layout_marginBottom="16dp"
            android:textColorLink="#006699"
            />

    </LinearLayout>
</ScrollView>
