<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/app_name"
            app:titleCentered="true"
            />

        <TextView
            android:id="@+id/txt_user_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/txt_remaining_days"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_main_desc"
                android:maxEms="40" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnFacebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/facebook"
                    android:layout_margin="10dp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnInstagram"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:text="@string/instagram"
                    android:layout_margin="10dp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnX"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:text="@string/x"
                    android:layout_margin="10dp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnYouTube"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:text="@string/youtube"
                    android:layout_margin="10dp"/>

            </LinearLayout>



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cbServicePermission"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_understand_and_agree"/>

            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnStartService"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:textColor="@color/btn_service_text_color"
            android:backgroundTint="@color/btn_social_media_bg_color"
            android:text="@string/start_service" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnStopService"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:textColor="@color/btn_service_text_color"
            android:backgroundTint="@color/btn_social_media_bg_color"
            android:text="@string/stop_service" />


<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginHorizontal="20dp"-->
<!--            android:layout_marginTop="20dp"-->
<!--            android:text="Bitte senden Sie möglichst einmal am Tag!"-->
<!--            android:maxEms="40" />-->

        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSendData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/btn_send_data_bg_color"
            android:includeFontPadding="false"
            android:text="@string/send_data"
            android:textColor="@color/btn_send_data_text_color"
            android:paddingHorizontal="10dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>

