<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/txt_user_id_hint_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_generate_user_id"
            android:textSize="14sp"
            android:paddingBottom="12dp" />

        <TextView
            android:id="@+id/txt_user_id_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/more"
            android:textColor="@color/purple_500"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <EditText
            android:id="@+id/edt_user_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:inputType="text"
            android:hint="@string/dialog_user_id_hint" />


    </LinearLayout>
</ScrollView>
